--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
 
+  <link rel="icon" href="%PUBLIC_URL%/jp.png" />
+
   <title>React Portfolio</title>
 </head>
 
