--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 
   <link rel="icon" href="%PUBLIC_URL%/jp.png" />
 
-  <title>React Portfolio</title>
+  <title>Joanna Preston Portfolio</title>
 </head>
 
 <body>
